--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "vuedraggable": "^2.24.3",
     "vuex": "^3.5.1",
     "vuex-module-decorators": "^1.0.1",
+    "vuex-persist": "^3.1.3",
     "xlsx": "^0.16.8",
     "yamljs": "^0.3.0"
   },
@@ -73,8 +74,8 @@
     "@types/sortablejs": "^1.10.6",
     "@types/tinymce": "^4.6.0",
     "@types/vue-splitpane": "^1.0.1",
-    "@types/webpack-env": "^1.15.3",
     "@types/vuedraggable": "^2.23.2",
+    "@types/webpack-env": "^1.15.3",
     "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
