--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tui-editor": "^1.4.10",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
+    "vue-content-loader": "^0.2.3",
     "vue-count-to": "^1.0.13",
     "vue-i18n": "^8.22.1",
     "vue-image-crop-upload": "^2.5.0",
