--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "sortablejs": "^1.12.0",
     "tinymce": "^5.5.1",
     "tui-editor": "^1.4.10",
+    "v-markdown": "^1.0.2",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-content-loader": "^0.2.3",
@@ -49,7 +50,10 @@
     "vue-i18n": "^8.22.1",
     "vue-image-crop-upload": "^2.5.0",
     "vue-property-decorator": "^9.0.2",
+    "vue-resize": "^1.0.0",
     "vue-router": "^3.4.8",
+    "vue-shortkey": "^3.1.7",
+    "vue-split-panel": "^1.0.4",
     "vue-splitpane": "^1.0.6",
     "vue-svgicon": "^3.2.9",
     "vue2-dropzone": "^3.6.0",
