--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "vuex": "^3.5.1",
     "vuex-module-decorators": "^1.0.1",
     "vuex-persist": "^3.1.3",
+    "vuex-router-sync": "^5.0.0",
     "xlsx": "^0.16.8",
     "yamljs": "^0.3.0"
   },
