--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-typescript-admin-template",
+  "name": "adempiere-aesthetic",
   "version": "1.0.0",
   "private": true,
   "author": "Chong Guo <armourcy@gmail.com>",
