--- a/package.json
+++ b/package.json
@@ -44,16 +44,15 @@
     "tui-editor": "^1.4.10",
     "v-markdown": "^1.0.2",
     "vue": "^2.6.12",
-    "vue-class-component": "^7.2.6",
     "vue-content-loader": "^0.2.3",
     "vue-count-to": "^1.0.13",
     "vue-i18n": "^8.22.1",
     "vue-image-crop-upload": "^2.5.0",
     "vue-property-decorator": "^9.0.2",
     "vue-resize": "^1.0.0",
+    "vue-router": "^3.4.9",
     "vue-shortkey": "^3.1.7",
     "vue-split-panel": "^1.0.4",
-    "vue-router": "^3.4.9",
     "vue-splitpane": "^1.0.6",
     "vue-svgicon": "^3.2.9",
     "vue2-dropzone": "^3.6.0",
@@ -142,5 +141,8 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/armour/vue-typescript-admin-template.git"
+  },
+  "peerDependencies": {
+    "vue-class-component": "^7.2.6"
   }
 }
