--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "eslint-plugin-standard": "^4.0.2",
     "eslint-plugin-vue": "^7.1.0",
     "fibers": "^5.0.0",
+    "install-peers": "^1.0.3",
     "lint-staged": "^10.5.1",
     "sass": "^1.29.0",
     "sass-loader": "^10.0.5",
