--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@tinymce/tinymce-vue": "^3.2.6",
     "@toast-ui/vue-editor": "^2.5.1",
+    "@vue/composition-api": "^1.0.0-rc.10",
     "axios": "^0.21.0",
     "clipboard": "^2.0.6",
     "codemirror": "^5.58.2",
